# meili-connector

./: Cargo.toml  README.md  banner.txt  config.yaml
examples/: postgres.yaml
examples/postgres/: postgres.yaml
src/: config.rs  data_source.rs  main.rs  meili.rs  synchronizer.rs
src/data_source/: data_source_enum.rs  data_source_setting.rs  postgres.rs
src/meili/: index_setting.rs  meili_config.rs  meili_enum.rs
