[package]
name = "meili-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.0", features = ["full"]}
meilisearch-sdk = "0.24.3"
serde = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde_json = "1.0.108"
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
futures = { version = "0.3.25", features = ["executor"] }
# needed for tokio-postgres
bytes = "1.5.0"