[package]
name = "meili-connector"
version = "0.1.0"
edition = "2021"
authors = ["dattran"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.0", features = ["full"]}
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
tokio-stream = "0.1.15"
meilisearch-sdk = "0.25.0"
serde = "1.0.193"
serde_yaml = "0.9"
serde_json = "1.0.108"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
futures = { version = "0.3.25", features = ["executor"] }
async-trait = "0.1.74"
bytes = "1.5.0"
owo-colors = "4.0.0"
regex = "1.10.4"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"

